...
            modifier = Modifier
                .size(140.dp)
                .padding(bottom = 20.dp),
            contentScale = ContentScale.Fit
        )
        Text(
            text = "Welcome to SSHPeaches. To begin, create your first resource.",
            style = MaterialTheme.typography.titleMedium
        )
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .padding(top = 24.dp),
...
